# mobily-biller

./: .env.example  .gitignore  .releaserc.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/api/: config.py  main.py  models.py
src/api/services/: __init__.py  auth.py  mobily.py  whatsapp.py
src/api/utils/: logger.py
