[tool.poetry]
name = "mobily-biller"
version = "0.1.0"
description = "API for calculating bills and sending WhatsApp notifications"
authors = ["Abdullah Alqahtani <anqorithm@protonmail.com>"]
packages = [
    { include = "api", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}
uvicorn = "^0.23.2"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 